Prevent context menu from wraping

--- a/Sage-Like/sidebar/contextMenu.css
+++ b/Sage-Like/sidebar/contextMenu.css
@@ -18,6 +18,7 @@
 	padding: 2px 13px;
 	text-decoration: none;
 	justify-content: space-between;
+	white-space: nowrap;
 }
 
 .contextmenu .contextmenuitem:hover {
